--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <div>
       <p>&nbsp;</p>
       <hr>
-      <p id="title">My Favorite Destinations</p>
+      <p id="title">Bucketlist Places</p>
       <p id="title_name">
 
 
 
 
       <!-------- BEGIN: NAME PLACEHOLDER -------->
-		1. Replace this text with your name.
+		Alyssa Keehan
       <!-------- END: NAME PLACEHOLDER -------->
 
       </p>
